tests/baselines/reference/targetTypeCastTest.errors.txt
==== tests/cases/compiler/targetTypeCastTest.ts (1 errors) ====
    declare var Point: { new(x:number, y:number): {x: number; y: number; }; }
    
    function Point(x, y) {
             ~~~~~
!!! targetTypeCastTest.ts(3,10): error TS2000: Duplicate identifier 'Point'. Additional locations:
!!! 	targetTypeCastTest.ts(1,13)
        this.x = x;
        this.y = y;   
    }
    
    interface Adder {
        (x: number, y: number): number;   
    }
    
    var add = <Adder>function(x,y) {    return x+ y;   }
    
    
    interface Adder2 {
        (x: number, y: number): number;   
    }
    
    var add2: Adder2 = function(x,y) {
        return 0;
    }
    
    function add3(x,y) {x}